company/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: company
  labels:
    app: company
spec:
  replicas: 1
  selector:
    matchLabels:
      app: company
  template:
    metadata:
      name: company
      labels:
        app: company
    spec:
      containers:
        - name: company
          image: registry.lion7.dev/invalid-image
          imagePullPolicy: Always
          volumeMounts:
            - name: config-volume
              mountPath: /home/user/config
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 10
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "0.25"
              memory: 256Mi
            limits:
              cpu: "0.25"
              memory: 2Gi
      volumes:
        - name: config-volume
          configMap:
            name: company
            items:
              - key: application.properties
                path: application.properties
