company/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: company
spec:
  selector:
    app: company
  ports:
    - name: http
      protocol: TCP
      appProtocol: HTTP
      port: 8080
      targetPort: 8081
