company/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: company
spec:
  rules:
    - host: "gerard.lion7.dev"
      http:
        paths:
          - pathType: Prefix
            path: "/company"
            backend:
              service:
                name: company
                port:
                  number: 8080
